[package]
name = "normalizer"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2021"
description = "Norm IDE"
repository = "https://github.com/krre/normalizer"

[lib]
name = "normalizer"
path = "src/normalizer/lib.rs"

[dependencies]
antiq = { path = "../antiq" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
