[package]
name = "normalizer"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"
description = "Norm IDE"
repository = "https://github.com/krre/normalizer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
antiq = { path = "../antiq" }
wasm-bindgen = "0.2.100"
